--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
 	<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
 	<img src="img/evo.png"> <!-- Imagem -->
-	<img src="img/50 mi.png">
+	<img src="img/50 mi.PNG">
 
 	<h1> O que é o W3C​ </h1>
 	<p> O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. </p>
