--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p>O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​</p>
 	<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
 	<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
-	<img src="img/evo.png"> <!-- Imagem -->
+	<img src="img/evo.PNG"> <!-- Imagem -->
 	<img src="img/50 mi.PNG">
 
 	<h1> O que é o W3C​ </h1>
@@ -44,7 +44,7 @@
 	<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
 	<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
 
-	<img src="img/obrigado.png">
+	<img src="img/obrigado.PNG">
 
 ​
 </body>
