--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title> Site Muito Daora 1C </title> <!-- Título do site -->
 </head> 
 <body>  <!-- Conteúdo da Página -->	 
-	<body style="background-color: #AAE1D4;">  
+	<body style="background-color: #E1FDF6;">  
 
 	<h1>Introdução ao HTML</h1> <!-- Título 1 -->
 	<p>HTML (Hyper Text Markup Language) é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.</p> <!-- Parágrafo  -->
