--- a/index.html
+++ b/index.html
@@ -2,50 +2,113 @@
 <html> <!-- Inicio da página -->
 <head> <!-- Cabeçalho -->
 	<title> Site Muito Daora 1C </title> <!-- Título do site -->
+
+	<style type="text/css">
+	
+	body{
+		background-color: #D7F7FF;
+		font-size: 13px;
+
+
+	}
+
+	figure{
+            text-align: center; 
+	}
+
+	h1{
+		text-align: center;
+		font-size: 60px;
+		font-weight: bold;
+        border-style: solid;
+        margin: 25px 500px 75px 500px;
+
+	}
+
+	h2{
+		text-align: center;
+        font-size: 45px;
+        font-weight: bold;
+        border-style: dashed;
+        margin: 25px 600px 75px 600px;
+	}
+
+    h3{
+    	font-size: 35px;
+        font-weight: bold;
+        border-style: dotted;
+        margin: 25px 1620px 75px 10px;
+    } 
+
+	p{
+		font-size: 25px;
+	    text-align: center;
+ 
+    }
+
+    ul, li{
+    	font-size: 25px;
+    	text-decoration: underline;
+    	margin: 10px 400px 10px 10px;
+    }
+
+    style{
+       
+
+	}
+
+</style>
+
+
+
 </head> 
 <body>  <!-- Conteúdo da Página -->	 
-	<body style="background-color: #E1FDF6;">  
-
+	
+	
 	<h1>Introdução ao HTML</h1> <!-- Título 1 -->
-	<p>HTML (Hyper Text Markup Language) é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.</p> <!-- Parágrafo  -->
-	<p>O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​</p>
-	<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
-	<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
-	<img src="img/evo.PNG"> <!-- Imagem -->
-	<img src="img/50 mi.PNG">
-
+			<p>	HTML (Hyper Text Markup Language) é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.</p> <!-- Parágrafo  -->
+			<p>O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​</p>
+		<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
+			<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
+		<figure>
+			<img src="img/evo.png" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
+		</figure>
+		<figure>
+			<img src="img/50 mi.png" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
+    	</figure>
+	
 	<h1> O que é o W3C​ </h1>
-	<p> O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. </p>
-	<h2> A formação da W3C​ </h2>
-	<p> Durante os próximas anos, o W3C publicou várias especificações (chamadas “recomendações”) incluindo o HTML, o formato de imagens PNG, e as Folhas de Estilo em Cascata versões 1 e 2.​ </p>
-	<h2> A Formação da W3C </h2>
-	<h3> Consórcio W3C </h3> <!-- Título 3 -->
-	<ul> <!-- Lista não ordenada --> 	
-  	  <li>Desenvolve Recomendações abertas (Padrões Web);</li> <!-- Item da lista -->
-  	  <li>Até agora mais de 80 padrões</li>
-  	  <li>Engajado em educação, expansão e desenvolvimento de orientações;</li>
-  	  <li>Um fórum neutro para construir consenso em torno de padrões web.</li>
-  	  <li>Padrões web devem ser abertos , isto é, não proprietários;</li>
-  	  <li>A web deve ser acessível a todos</li> 
-	</ul>  
+			<p> O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. </p>
+		<h2> A formação da W3C​ </h2>
+			<p> Durante os próximas anos, o W3C publicou várias especificações (chamadas “recomendações”) incluindo o HTML, o formato de imagens PNG, e as Folhas de Estilo em Cascata versões 1 e 2.​ </p>
+		<h2> A Formação da W3C </h2>
+			<h3> Consórcio W3C </h3> <!-- Título 3 -->
+				<ul> <!-- Lista não ordenada --> 	
+  	 		 		<li>Desenvolve Recomendações abertas (Padrões Web);</li> <!-- Item da lista -->
+  	  				<li>Até agora mais de 80 padrões</li>
+  	 		    	<li>Engajado em educação, expansão e desenvolvimento de orientações;</li>
+  	  				<li>Um fórum neutro para construir consenso em torno de padrões web.</li>
+  	  				<li>Padrões web devem ser abertos , isto é, não proprietários;</li>
+  	  				<li>A web deve ser acessível a todos</li> 
+				</ul>  
 
 	<h1> O que é e para que serve o CSS </h1>
-	<p>CSS (Cascading Style Sheets — Folhas de Estilos em Cascata) é uma extensão da HTML, uma linguagem de estilo, ou seja, fazendo o uso dessa linguagem é possível definir como o conteúdo dos elementos HTML serão apresentados na página da Web. Essa extensão foi incorporada à linguagem HTML a partir de sua quarta versão em 1997.​ </p>	
-	<h2> Benefícios do uso do CSS </h2>
-	<ul>
-		<li>Controle do layout de diversos documentos utilizando apenas uma folha de estilos.​</li>
-		<li>Maior precisão no controle do layout e design​</li>
-		<li>Aplicação de diferentes layouts para adaptação do conteúdo e design em diferentes formas de apresentação (impressoras, telas de diferentes tamanhos, etc.) (W3CSCHOOL, ONLINE)​</li>
-	</ul>
+			<p>CSS (Cascading Style Sheets — Folhas de Estilos em Cascata) é uma extensão da HTML, uma linguagem de estilo, ou seja, fazendo o uso dessa linguagem é possível definir como o conteúdo dos elementos HTML serão apresentados na página da Web. Essa extensão foi incorporada à linguagem HTML a partir de sua quarta versão em 1997.​ </p>	
+		<h2> Benefícios do uso do CSS </h2>
+			<ul>
+				<li>Controle do layout de diversos documentos utilizando apenas uma folha de estilos.​</li>
+				<li>Maior precisão no controle do layout e design​</li>
+				<li>Aplicação de diferentes layouts para adaptação do conteúdo e design em diferentes formas de apresentação (impressoras, telas de diferentes tamanhos, etc.) (W3CSCHOOL, ONLINE)​</li>
+			</ul>
 
-	<h2> Editores HTML </h2>
-	<p> Os editores HTML são os softwares que utilizamos para criar as páginas da web empregando as linguagens de marcação e de estilo. Tais editores possuem diversas funcionalidades que auxiliam no processo de desenvolvimento da página, proporcionando, por exemplo a visualização do projeto tanto em linhas de códigos quanto em design de apresentação. </p>
+		<h2> Editores HTML </h2>
+			<p> Os editores HTML são os softwares que utilizamos para criar as páginas da web empregando as linguagens de marcação e de estilo. Tais editores possuem diversas funcionalidades que auxiliam no processo de desenvolvimento da página, proporcionando, por exemplo a visualização do projeto tanto em linhas de códigos quanto em design de apresentação. </p>
 
-	<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
-	<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
+		<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
+			<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
+			<figure>
+				<img src="img/obrigado.png">
+			</figure>
 
-	<img src="img/obrigado.PNG">
-
-​
-</body>
+​</body>
 </html>
