HTML com CSS interno

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
 			<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
 			<figure>
-				<img src="img/obrigado.png">
+				<img src="img/obrigado.png" alt="Obrigado pela atenção!">
 			</figure>
 
 ​</body>
