--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 		<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
 			<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
 		<figure>
-			<img src="img/evo.png" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
+			<img src="img/evo.PNG" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
 		</figure>
 		<figure>
-			<img src="img/50 mi.png" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
+			<img src="img/50 mi.PNG" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
     	</figure>
 	
 	<h1> O que é o W3C​ </h1>
@@ -107,7 +107,7 @@
 		<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
 			<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
 			<figure>
-				<img src="img/obrigado.png" alt="Obrigado pela atenção!">
+				<img src="img/obrigado.PNG" alt="Obrigado pela atenção!">
 			</figure>
 
 ​</body>
