--- a/index.html
+++ b/index.html
@@ -1,80 +1,25 @@
 <!DOCTYPE html> <!-- Versão do Html/Html5 -->
 <html> <!-- Inicio da página -->
-<head> <!-- Cabeçalho -->
-	<title> Site Muito Daora 1C </title> <!-- Título do site -->
-
-	<style type="text/css">
-	
-	body{
-		background-color: #D7F7FF;
-		font-size: 13px;
-
-
-	}
-
-	figure{
-            text-align: center; 
-	}
-
-	h1{
-		text-align: center;
-		font-size: 60px;
-		font-weight: bold;
-        border-style: solid;
-        margin: 25px 500px 75px 500px;
-
-	}
-
-	h2{
-		text-align: center;
-        font-size: 45px;
-        font-weight: bold;
-        border-style: dashed;
-        margin: 25px 600px 75px 600px;
-	}
-
-    h3{
-    	font-size: 35px;
-        font-weight: bold;
-        border-style: dotted;
-        margin: 25px 1620px 75px 10px;
-    } 
-
-	p{
-		font-size: 25px;
-	    text-align: center;
- 
-    }
-
-    ul, li{
-    	font-size: 25px;
-    	text-decoration: underline;
-    	margin: 10px 400px 10px 10px;
-    }
-
-    style{
-       
-
-	}
-
-</style>
-
-
-
-</head> 
-<body>  <!-- Conteúdo da Página -->	 
-	
-	
-	<h1>Introdução ao HTML</h1> <!-- Título 1 -->
+	<head lang="pt-br"> <!-- Cabeçalho -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<title> Site Muito Daora 1C </title> <!-- Título do site -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head> 
+	<body>  <!-- Conteúdo da Página -->	 
+		
+		<h1>Introdução ao HTML</h1> <!-- Título 1 -->
 			<p>	HTML (Hyper Text Markup Language) é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.</p> <!-- Parágrafo  -->
 			<p>O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​</p>
+			<p> Você pode aprender HTML e outras linguagens se clicar </p>
+			<p><a href="https://www.w3schools.com/" target="_blank">AQUI</a></p>
 		<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
 			<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
 		<figure>
-			<img src="img/evo.PNG" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
+			<img src="img/evo.png" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
 		</figure>
 		<figure>
-			<img src="img/50 mi.PNG" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
+			<img src="img/50 mi.png" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
     	</figure>
 	
 	<h1> O que é o W3C​ </h1>
@@ -106,9 +51,12 @@
 
 		<h2> Diferença entre um arquivo de extensão .html e .htm​ </h2>
 			<p> A extensão .html é a mais usual e comum hoje em dia. A extensão .htm é mais antiga, época em que o sistema DOS era um dos mais utilizados e só aceitava extensões de arquivos que contivessem 3 caracteres (por exemplo: doc, txt, exe…)​ </p>
+			
 			<figure>
-				<img src="img/obrigado.PNG" alt="Obrigado pela atenção!">
+				 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_self">
+				 <img src="img/obrigado.png" alt="Obrigado pela atenção!"> 
+		         </a>	
 			</figure>
-
-​</body>
+		   <p> Ei, psiu! Você aí, quer ver algo legal? Clique na imagem acima (▀̿Ĺ̯▀̿ ̿) </p>
+	</body>
 </html>
