--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<h2> Breve Histórico da evolução do  HTML​ </h2> <!-- Título 2 -->
 			<p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. </p>
 		<figure>
-			<img src="img/evo.png" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
+			<img src="img/evo.PNG" alt="Imagem Da Evolução Do HTML"> <!-- Imagem -->
 		</figure>
 		<figure>
-			<img src="img/50 mi.png" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
+			<img src="img/50 mi.PNG" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários">
     	</figure>
 	
 	<h1> O que é o W3C​ </h1>
@@ -54,8 +54,8 @@
 			
 			<figure>
 				 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_self">
-				 <img src="img/obrigado.png" alt="Obrigado pela atenção!"> 
-		         </a>	
+				 <img src="img/obrigado.PNG" alt="Obrigado pela atenção!"> 
+		                 </a>	
 			</figure>
 		   <p> Ei, psiu! Você aí, quer ver algo legal? Clique na imagem acima (▀̿Ĺ̯▀̿ ̿) </p>
 	</body>
