--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html> <!-- Versão do Html/Html5 -->
 <html> <!-- Inicio da página -->
-	<head lang="pt-br"> <!-- Cabeçalho -->
+ 	<head lang="pt-br"> <!-- Cabeçalho -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<title> Site Muito Daora 1C </title> <!-- Título do site -->
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head> 
+		<link rel="shortcu icon" href="img/favicon.png">
+ 	</head> 
 	
 	<body>  <!-- Conteúdo da Página -->	 
 		<div class="cernter">
@@ -14,7 +15,7 @@
 			<nav><h1>Introdução ao HTML</h1></nav>
 			</header>	
 	       
-	        <div>	
+	    	<div>	
 				<h1 class="margin_top">HTML é a linguagem de marcação padrão para páginas web</h1> <!-- Título 1 -->
 					
 					<p class="center">	HTML (Hyper Text Markup Language) é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.</p> <!-- Parágrafo  -->
