--- a/javascript.html
+++ b/javascript.html
@@ -6,6 +6,7 @@
 		  <title> Site Muito Daora 1C 2 </title> <!-- Título do site -->
 		  <link rel="stylesheet" type="text/css" href="css/reset.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="shortcu icon" href="img/favicon.png">
   </head> 
 	
   <body>
