--- a/javascript.html
+++ b/javascript.html
@@ -6,12 +6,13 @@
 		  <title> Site Muito Daora 1C 2 </title> <!-- Título do site -->
 		  <link rel="stylesheet" type="text/css" href="css/reset.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
       <link rel="shortcu icon" href="img/favicon.png">
   </head> 
 	
   <body>
-    <div class="container">
-            <div>
+    <div class="container"> 
+            <div> <!-- JAVASCRIPT -->
                <header>
                 <nav><h1> Saiba mais sobre o JavaScript </h1></nav>
                 </header>
@@ -52,7 +53,7 @@
               	  	  </tr>
               	   
                    </table>
-            </div>        
+            </div> <!-- /JAVASCRIPT -->      
             
             <div>
                <footer>
