--- a/posicionamento.html
+++ b/posicionamento.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Entenndo os Positions</title>
+	<title>Entendendo os Positions</title>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 	<link rel="shortcu icon" href="img/favicon.png">
 </head>
