--- a/posicionamento.html
+++ b/posicionamento.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Entendendo os Positions</title>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 	<link rel="shortcu icon" href="img/favicon.png">
@@ -41,7 +43,7 @@
 		width: 100%;
 		height: 1220px;
 		text-align: center; 
-		font-size: 120%;
+		font-size: 1em;
 		
 	}
 
@@ -122,11 +124,11 @@
 	<div class="main">
 		<h1>Testando... ( ˘︹˘ ) </h1>
 		<div class="container">
-			<div class="topoesquerda"> NO TOPO ESQUERDA (͠≖ ͜ʖ͠≖) </div>
-			<div class="topodireita"> NO TOPO DIREITA (▀̿Ĺ̯▀̿ ̿) </div>
-			<div class="baseesquerda"> NA BASE ESQUERDA (¬‿¬) </div>
-			<div class="basedireita"> NA BASE DIREITA (ˆ▿ˆc) </div>
-			<div class="centro"> NO CENTRO (ㆆ_ㆆ) </div>
+			<div class="topoesquerda"> NO TOPO ESQUERDA <p>(͠≖ ͜ʖ͠≖)</p> </div>
+			<div class="topodireita"> NO TOPO DIREITA <p>(▀̿Ĺ̯▀̿ ̿)</p> </div>
+			<div class="baseesquerda"> NA BASE ESQUERDA <p>(¬‿¬)</p> </div>
+			<div class="basedireita"> NA BASE DIREITA <p>(ˆ▿ˆc)</p> </div>
+			<div class="centro"> NO CENTRO <p>(ㆆ_ㆆ)</p> </div>
 		</div>
 		<footer>
             <p class="center"><a href="index.html" target="_self"> Clique aqui se deseja retornar para a página principal </a></p>
