--- a/posicionamento.html
+++ b/posicionamento.html
@@ -124,11 +124,11 @@
 	<div class="main">
 		<h1>Testando... ( ˘︹˘ ) </h1>
 		<div class="container">
-			<div class="topoesquerda"> NO TOPO ESQUERDA <p>(͠≖ ͜ʖ͠≖)</p> </div>
-			<div class="topodireita"> NO TOPO DIREITA <p>(▀̿Ĺ̯▀̿ ̿)</p> </div>
-			<div class="baseesquerda"> NA BASE ESQUERDA <p>(¬‿¬)</p> </div>
-			<div class="basedireita"> NA BASE DIREITA <p>(ˆ▿ˆc)</p> </div>
-			<div class="centro"> NO CENTRO <p>(ㆆ_ㆆ)</p> </div>
+			<div class="topoesquerda"> <p>NO TOPO ESQUERDA</p> <p>(͠≖ ͜ʖ͠≖)</p> </div>
+			<div class="topodireita"> <p>NO TOPO DIREITA</p> <p>(▀̿Ĺ̯▀̿ ̿)</p> </div>
+			<div class="baseesquerda"> <p>NA BASE ESQUERDA</p> <p>(¬‿¬)</p> </div>
+			<div class="basedireita"> <p>NA BASE DIREITA</p> <p>(ˆ▿ˆc)</p> </div>
+			<div class="centro"> <p>NO CENTRO</p> <p>(ㆆ_ㆆ)</p> </div>
 		</div>
 		<footer>
             <p class="center"><a href="index.html" target="_self"> Clique aqui se deseja retornar para a página principal </a></p>
