--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<nav class="menu-opcoes">
 					<ul class="ajustes">
 						<li><a href="#">Inicio</a></li>
-						<li><a href="#html">HTML</a></li>
+						<li><a href="#">HTML</a></li>
 						<li><a href="#css">CSS</a></li>
 						<li><a href="javascript.html">JavaScript</a></li>
 						<li><a href="posicionamento.html">Posicionamentos</a></li>
@@ -37,14 +37,14 @@
 						<p class>⠀⠀⠀⠀O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. </p>
 						<p> Ao longo dos anos, o W3C publicou várias especificações (chamadas “recomendações”) incluindo o HTML, o formato de imagens PNG, e as Folhas de Estilo em Cascata versões 1 e 2.​ </p>
 
-						<div class="imagerover">
+						<div id="css" class="imagerover">
 						<figure class="imgdireita">
 						<img class="imgtexto" src="img/50_mi.png" alt="Periodo de tempo que a tecnologia demorou para atingir 50 milhões de usuários" width="50%" height="30%">
 				    	</figure>
 						</div>  
+
 			    </div> <!-- /HTML -->	
-				
-				<div id="css"> <!-- CSS -->	
+				<div> <!-- CSS -->	
 						<h2> Introdução ao CSS </h2>
 							
 							<p>⠀⠀⠀⠀CSS (Cascading Style Sheets — Folhas de Estilos em Cascata) é uma extensão do HTML, uma linguagem de estilo, ou seja, fazendo o uso dessa linguagem é possível definir como o conteúdo dos elementos HTML serão apresentados na página da Web. Essa extensão foi incorporada à linguagem HTML a partir de sua quarta versão em 1997.​ </p>	
