--- a/posicionamento.html
+++ b/posicionamento.html
@@ -15,7 +15,16 @@
 	}
 	
 	footer{
-		font-size: 1.5em;
+		text-align: justify;
+		width: 98.96%;
+		background-color: rgba(23, 44, 61, 0.99); 	
+	    padding: 10px;
+	   	position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	    font-size: 120%;
+		line-height: 1.5;
 	}
 
 	.fixo{
@@ -130,8 +139,8 @@
 			<div class="basedireita"> <p>NA BASE DIREITA</p> <p>(ˆ▿ˆc)</p> </div>
 			<div class="centro"> <p>NO CENTRO</p> <p>(ㆆ_ㆆ)</p> </div>
 		</div>
-		<footer>
-            <p class="center"><a href="index.html" target="_self"> Clique aqui se deseja retornar para a página principal </a></p>
+		<footer class="texto">
+        		<h5><a href="index.html" target="_self"> Clique aqui se deseja retornar para a página principal </a></h5>
         </footer>
 	</div>
 </body>
